--- a/PROYECTO SEMESTRAL/Exclusivo PC/CRUSADER KINGS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/CRUSADER KINGS.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJPC">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -65,10 +65,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/Crusader Kings III.jpg" alt="sin imagen"><h3>CRUSADER KINGS III</h3>
+            <img class="img" src="../img/PC/Crusader Kings III.jpg" alt="sin imagen"><h3 class="letraVJ">CRUSADER KINGS III</h3>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">El juego, tal como sus predecesores Crusader Kings y Crusader Kings II, es un juego de gran estrategia y
                  un simulador de dinastías ambientado en la Edad Media, entre la era vikinga y la caída de Constantinopla.
                   A diferencia de su predecesor, a fecha de la publicación, sólo tiene dos fechas de inicio: 867 y 1066. Las dinastías
@@ -86,15 +86,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PC </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PC </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=Demi3MfHHYw" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/1158310/Crusader_Kings_III/?l=spanish" target="_blank">
                     <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/crusader-kings-iii-pc-steam-key-global-i10000195605007" target="_blank">
