--- a/PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJPC">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -65,10 +65,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/Escape from Tarkov.jpg" alt="sin imagen"><h4>ESCAPE FROM TARKOV</h4>
+            <img class="img" src="../img/PC/Escape from Tarkov.jpg" alt="sin imagen"><h4 class="letraVJ">ESCAPE FROM TARKOV</h4>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Escape from Tarkov es un videojuego de acción bélica multijugador en primera persona para PC desarrollado
                 por Developer Battlestate Games que nos trasladará a la abandonada ciudad de Tarkov, en Rusia, en una lucha
                  sin cuartel entre facciones, guerrillas locales y otros enemigos. Realismo, supervivencia y acción se dan
@@ -78,15 +78,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PC </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PC </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=8R5t3a2jT4A" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.g2a.com/es/escape-from-tarkov-pc-battlestate-key-global-i10000148047004" target="_blank">
                 <img src="../img/PC/logoG2A.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.eneba.com/latam/other-escape-from-tarkov-official-website-key-global" target="_blank">
