--- a/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/BATTLE TECH.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJPC">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -65,10 +65,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/BattleTech.png" alt="sin imagen"><h2>BATTLE TECH</h2>
+            <img class="img" src="../img/PC/BattleTech.png" alt="sin imagen"><h2 class="letraVJ">BATTLE TECH</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">BattleTech es una franquicia de ciencia ficción y juegos de guerra 
                 (también designados por el anglicismo wargames) creada por FASA Corporation y, actualmente, propiedad de WizKids.
                  La serie comenzó en 1984 cuando se lanzó al mercado en Estados Unidos el juego de tablero BattleDroids. Lucasfilm 
@@ -83,15 +83,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PC </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PC </p>
                 <P></P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=tsIMfOo_VO0" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar" >Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ" >Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/637090/BATTLETECH/?l=spanish&cc=PT" target="_blank">
                     <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/battletech-steam-key-global-i10000149680001" target="_blank">
