--- a/PROYECTO SEMESTRAL/Exclusivo PC/DOTA 2.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/DOTA 2.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJPC">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -65,10 +65,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/Dota 2.jpg" alt="sin imagen"><h2>DOTA 2</h2>
+            <img class="img" src="../img/PC/Dota 2.jpg" alt="sin imagen"><h2 class="letraVJ">DOTA 2</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Dota 2 es un videojuego gratuito del género ARTS (Estrategia de Acción en Tiempo Real) también conocido como MOBA
                  (Multiplayer Online Battle Arena) distribuido por la plataforma Steam de Valve.
                 El origen de Dota 2 se remonta a StarCraft, en concreto Aeon of Strife (AoS), un mapa personalizado y el primer
@@ -80,15 +80,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PC</p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PC</p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=-cSFPIwMEq4" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/570/Dota_2/?l=spanish" target="_blank">
                     <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 
