--- a/PROYECTO SEMESTRAL/Exclusivo PC/LEAGUE OF LEGENDS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/LEAGUE OF LEGENDS.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJPC">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -65,10 +65,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/LEAGUE OF LEGENDS.jpg" alt="sin imagen"><h4>LEAGUE OF LEGENDS</h4>
+            <img class="img" src="../img/PC/LEAGUE OF LEGENDS.jpg" alt="sin imagen"><h4 class="letraVJ">LEAGUE OF LEGENDS</h4>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">League of Legends (también conocido por sus siglas LoL), es un videojuego multijugador de arena de batalla en 
                 línea desarrollado y publicado por Riot Games. Inspirándose en Defense of the Ancients, un mapa personalizado
                  para Warcraft III, los fundadores de Riot buscaron desarrollar un juego independiente del mismo género. Desde
@@ -86,15 +86,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PC </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PC </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=nOVxF0FEk9A" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://www.leagueoflegends.com/es-es/" target="_blank">
                     <img src="../img/PC/logoLol.png"  alt="Juego PC" class="logoY"></a></p>
                 
