--- a/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/PALADINS.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&display=swap" rel="stylesheet">
 </head>
-<body class="fondoVJ">
+<body class="fondoVJPC">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="../Pantalla.html" style="margin-left: 25px;">Inicio</a>
@@ -65,10 +65,10 @@
 
         <div class="row">
            <div class="col-md-4 col-sm-12">
-            <img class="img" src="../img/PC/paladins.jpg" alt="sin imagen"><h2>PALADINS</h2>
+            <img class="img" src="../img/PC/paladins.jpg" alt="sin imagen"><h2 class="letraVJ">PALADINS</h2>
            </div>
            <div class="col-md-8 col-sm-12">
-            <h2 class="centrar">Descripcion</h2><br>
+            <h2 class="centrar letraVJ">Descripcion</h2><br>
             <p class="centrar letraVJ">Paladins: Champions of the Realm es un videojuego gratuito en línea de disparos en primera persona con componentes de hero shooter.
                 El 9 de octubre de 2012 Hi-Rez anunció estar trabajando en dos nuevos juegos que serían los sucesores de Global Agenda (otro juego
                  de la compañía) varios años después se anunciaría paladins, que sería el primero de estos juegos el otro sería rogue company, 
@@ -84,15 +84,15 @@
         <br>
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <H2>Plataformas</H2><br>
-                <p>° PC </p>
+                <H2 class="letraVJ">Plataformas</H2><br>
+                <p class="letraVJ">° PC </p>
                 <P> </P>
                 <br>
-                <h2>Trailer</h2><br>
+                <h2 class="letraVJ">Trailer</h2><br>
                 <a href="https://www.youtube.com/watch?v=g4WHiMVq1-8" target="_blank"><img src="../img/PLAYSTATION/logoYoutube.png"  alt="youtube"  class="logoY" ></a>
             </div>
             <div class="col-md-4 col-sm-12">
-                <h2 class="centrar">Tiendas disponibles</h2><br>
+                <h2 class="centrar letraVJ">Tiendas disponibles</h2><br>
                 <p class="centrar" ><a href="https://store.steampowered.com/app/444090/Paladins/?l=spanish" target="_blank">
                     <img src="../img/PC/logoSteam.png" alt="Juego PC" class="logoY"></a></p>
                 <p class="centrar" ><a href="https://www.g2a.com/es/paladins-crystals-key-global-200-crystals-i10000030144007" target="_blank">
