--- a/PROYECTO SEMESTRAL/Exclusivo PC/EUROPA UNIVERSALIS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/EUROPA UNIVERSALIS.html
@@ -104,13 +104,14 @@
             </div>
         </div>
         <br><br><br><div class="row">
-            <div class="col"><form action="/action_page.php">
-                <textarea class="cu1" name="message" rows="5" cols="140"></textarea>
-                
-                <input type="submit" value="Enviar" class="btn btn-danger , cu1"  >
-              </form><br><br><br><br>
-            </div>
-        </div>
+          <div class="col"><form action="/action_page.php">
+            <h4 class="letraVJ">Comentario</h4>
+              <textarea class="cu1" name="message" rows="5" cols="140"></textarea>
+              
+              <input type="submit" value="Enviar" class="btn btn-danger , cu1"  >
+            </form><br><br><br><br>
+          </div>
+      </div>
 
 
 
