--- a/PROYECTO SEMESTRAL/Pantalla.html
+++ b/PROYECTO SEMESTRAL/Pantalla.html
@@ -41,7 +41,7 @@
               </li>
               <li class="nav-item dropdown active , cu1">
                 <a class="nav-link dropdown-toggle , cu1"  id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Seleccione
+                  Perfil
                 </a>
                 <div class="dropdown-menu , cu1" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item , cu1" href="Login.html">Iniciar Sesion</a>
@@ -61,7 +61,7 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-12 col-sm-12">
+        <div class="col-md-6 col-sm-6">
           <h5 style="border-radius: 25px;
           background: #ffffffc9;
           padding: 15px;
@@ -81,10 +81,10 @@
         </div>
       </div><BR>
           <div class="row">
-            <div class="col-md-3 col-sm-6"><a class="cuX1" href="../PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS 5.html" ><img src="../PROYECTO SEMESTRAL/img/XBOX/gears5.jfif"  alt="sin imagen" class="img"><br><p class="letraX">Gears 5</p></a></div>
-            <div class="col-md-3 col-sm-6"><a class="cuX1" href="../PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html" ><img src="../PROYECTO SEMESTRAL/img/XBOX/HALO INFINITE.jpg"  alt="sin imagen" class="img"><br><p class="letraX"> Halo Infinite</p></a></div>
-            <div class="col-md-3 col-sm-6 "><a class="cuX1" href="../PROYECTO SEMESTRAL/Exclusivo Xbox/DESTINY.html" ><img src="../PROYECTO SEMESTRAL/img/XBOX/DESTINY.jpg"  alt="sin imagen" class="img"><br><p class="letraX">Destiny</p></a></div>
-            <div class="col-md-3 col-sm-6"><a class="cuX1" href="../PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html" ><img src="../PROYECTO SEMESTRAL/img/XBOX/forza motorsport.jpeg"  alt="sin imagen" class="img"><br><p class="letraX">Forza Motorsport</p></a></div>
+            <div class="col-md-3 col-sm-6"><a class="cuX1" href="../PROYECTO SEMESTRAL/Exclusivo Xbox/GEARS 5.html" ><img src="../PROYECTO SEMESTRAL/img/XBOX/gears5.jfif"  alt="sin imagen" class="img"><br><p class="letraX" style="border-radius: 0px;background: #11680b;padding: 15px;width: 179px;height: 50px;color: rgb(255 255 255);">Gears 5</p></a></div>
+            <div class="col-md-3 col-sm-6"><a class="cuX1" href="../PROYECTO SEMESTRAL/Exclusivo Xbox/HALO INFINITE.html" ><img src="../PROYECTO SEMESTRAL/img/XBOX/HALO INFINITE.jpg"  alt="sin imagen" class="img"><br><p class="letraX" style="border-radius: 0px;background: #11680b;padding: 15px;width: 179px;height: 50px;color: rgb(255 255 255);"> Halo Infinite</p></a></div>
+            <div class="col-md-3 col-sm-6 "><a class="cuX1" href="../PROYECTO SEMESTRAL/Exclusivo Xbox/DESTINY.html" ><img src="../PROYECTO SEMESTRAL/img/XBOX/DESTINY.jpg"  alt="sin imagen" class="img"><br><p class="letraX" style="border-radius: 0px;background: #11680b;padding: 15px;width: 179px;height: 50px;color: rgb(255 255 255);">Destiny</p></a></div>
+            <div class="col-md-3 col-sm-6"><a class="cuX1" href="../PROYECTO SEMESTRAL/Exclusivo Xbox/FORZA MOTORSPORT 5.html" ><img src="../PROYECTO SEMESTRAL/img/XBOX/forza motorsport.jpeg"  alt="sin imagen" class="img"><br><p class="letraX" style="border-radius: 0px;background: #11680b;padding: 15px;width: 179px;height: 88px;color: rgb(255 255 255);">Forza Motorsport</p></a></div>
         </div><br>
         <div class="row">
           <div class="col-md-12 col-sm-12">
@@ -97,10 +97,10 @@
           </div>
         </div><BR>
           <div class="row">
-          <div class="col-md-3 col-sm-6 "><a class="cuP1" href="../PROYECTO SEMESTRAL/Exclusivo Play/GOD OF WAR RAGNAROK.html" ><img src="../PROYECTO SEMESTRAL/img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">God Of War Ragnarok</p></a></div>
-          <div class="col-md-3 col-sm-6 "><a class="cuP1" href="../PROYECTO SEMESTRAL/Exclusivo Play/THE LAST OF US.html" ><img src="../PROYECTO SEMESTRAL/img/PLAYSTATION/the last of as part ll.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">The Last Of As Part II</p></a></div>
-          <div class="col-md-3 col-sm-6"><a class="cuP1" href="../PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html" ><img src="../PROYECTO SEMESTRAL/img/PLAYSTATION/ghost os tsushima.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">Ghost Of Tsushima</p></a></div>
-          <div class="col-md-3 col-sm-6"><a class="cuP1" href="../PROYECTO SEMESTRAL/Exclusivo Play/HORIZON ZERO DAWN.html" ><img src="../PROYECTO SEMESTRAL/img/PLAYSTATION/horizon zero dawn.jpeg"  alt="sin imagen" class="img" ><br><p class="letrap">Horizon Zero Dawn</p></a></div>
+          <div class="col-md-3 col-sm-6 "><a class="cuP1" href="../PROYECTO SEMESTRAL/Exclusivo Play/GOD OF WAR RAGNAROK.html" ><img src="../PROYECTO SEMESTRAL/img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg"  alt="sin imagen" class="img"><br><p class="letrap" style="border-radius: 0px;background: #003fb1;padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">God Of War Ragnarok</p></a></div>
+          <div class="col-md-3 col-sm-6 "><a class="cuP1" href="../PROYECTO SEMESTRAL/Exclusivo Play/THE LAST OF US.html" ><img src="../PROYECTO SEMESTRAL/img/PLAYSTATION/the last of as part ll.jpeg"  alt="sin imagen" class="img"><br><p class="letrap" style="border-radius: 0px;background: #003fb1;padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">The Last Of As Part II</p></a></div>
+          <div class="col-md-3 col-sm-6"><a class="cuP1" href="../PROYECTO SEMESTRAL/Exclusivo Play/GHOST OF TSUSHIMA.html" ><img src="../PROYECTO SEMESTRAL/img/PLAYSTATION/ghost os tsushima.jpeg"  alt="sin imagen" class="img"><br><p class="letrap" style="border-radius: 0px;background: #003fb1;padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">Ghost Of Tsushima</p></a></div>
+          <div class="col-md-3 col-sm-6"><a class="cuP1" href="../PROYECTO SEMESTRAL/Exclusivo Play/HORIZON ZERO DAWN.html" ><img src="../PROYECTO SEMESTRAL/img/PLAYSTATION/horizon zero dawn.jpeg"  alt="sin imagen" class="img" ><br><p class="letrap" style="border-radius: 0px;background: #003fb1;padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">Horizon Zero Dawn</p></a></div>
       </div><br>
       <div class="row">
         <div class="col-md-12 col-sm-12">
@@ -113,15 +113,15 @@
         </div>
       </div><BR>
         <div class="row">
-          <div class="col-md-3 col-sm-6"><a class="cuN1" href="../PROYECTO SEMESTRAL/Exclusivo Nintendo/LEGEND ZELDA BREATH WILD.html" ><img src="../PROYECTO SEMESTRAL/img/NINTENDO/legend-zelda-breath-wild.webp"  alt="sin imagen" class="img"><br><p class="letraN">Breath Of The Wild</p></a></div>
-          <div class="col-md-3 col-sm-6"><a  class="cuN1" href="../PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html" ><img src="../PROYECTO SEMESTRAL/img/NINTENDO/animal-crossing.jpg"  alt="sin imagen" class="img"><br><p class="letraN">Animal Crossing</p></a></div>
-          <div class="col-md-3 col-sm-6"><a  class="cuN1" href="../PROYECTO SEMESTRAL/Exclusivo Nintendo/SUPER SMASH BROS.html" ><img src="../PROYECTO SEMESTRAL/img/NINTENDO/Super-smash-bros.jpg"  alt="sin imagen" class="img"><br><p class="letraN">Super Smash Bros</p></a></div>
-          <div class="col-md-3 col-sm-6"><a  class="cuN1" href="../PROYECTO SEMESTRAL/Exclusivo Nintendo/DONKEY KONG COUNTRY.html" ><img src="../PROYECTO SEMESTRAL/img/NINTENDO/Donkey kong country.webp"  alt="sin imagen" class="img"><br><p class="letraN">DONKEY KONG COUNTRY</p></a></div>
+          <div class="col-md-3 col-sm-6"><a class="cuN1" href="../PROYECTO SEMESTRAL/Exclusivo Nintendo/LEGEND ZELDA BREATH WILD.html" ><img src="../PROYECTO SEMESTRAL/img/NINTENDO/legend-zelda-breath-wild.webp"  alt="sin imagen" class="img"><br><p class="letraN" style="border-radius: 0px;background: #a90000;padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">Breath Of The Wild</p></a></div>
+          <div class="col-md-3 col-sm-6"><a  class="cuN1" href="../PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html" ><img src="../PROYECTO SEMESTRAL/img/NINTENDO/animal-crossing.jpg"  alt="sin imagen" class="img"><br><p class="letraN" style="border-radius: 0px;background: #a90000;padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">Animal Crossing</p></a></div>
+          <div class="col-md-3 col-sm-6"><a  class="cuN1" href="../PROYECTO SEMESTRAL/Exclusivo Nintendo/SUPER SMASH BROS.html" ><img src="../PROYECTO SEMESTRAL/img/NINTENDO/Super-smash-bros.jpg"  alt="sin imagen" class="img"><br><p class="letraN" style="border-radius: 0px;background: #a90000;padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">Super Smash Bros</p></a></div>
+          <div class="col-md-3 col-sm-6"><a  class="cuN1" href="../PROYECTO SEMESTRAL/Exclusivo Nintendo/DONKEY KONG COUNTRY.html" ><img src="../PROYECTO SEMESTRAL/img/NINTENDO/Donkey kong country.webp"  alt="sin imagen" class="img"><br><p class="letraN" style="border-radius: 0px;background: #a90000;padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">DONKEY KONG COUNTRY</p></a></div>
       </div><br><br>
       <div class="row">
         <div class="col-md-12 col-sm-12">
           <h5 style="    border-radius: 0px;
-          background: #a5a000;
+          background: rgb(2, 155, 142);
           padding: 15px;
           width: 172px;
           height: 50px;
@@ -129,10 +129,10 @@
         </div>
       </div><BR>
       <div class="row"><br><br>
-        <div class="col-md-3 col-sm-6"><a  class="cuPC1" href="../PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html" ><img src="../PROYECTO SEMESTRAL/img/PC/counter strike.webp"  alt="sin imagen" class="img"><br><p class="letraPC">Counter Strike</p></a></div>
-        <div class="col-md-3 col-sm-6"><a class="cuPC1" href="../PROYECTO SEMESTRAL/Exclusivo PC/DOTA 2.html" ><img src="../PROYECTO SEMESTRAL/img/PC/Dota 2.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">Dota 2</p></a></div>
-        <div class="col-md-3 col-sm-6"><a class="cuPC1" href="../PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html" ><img src="../PROYECTO SEMESTRAL/img/PC/Escape from Tarkov.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">Escape From Tarkvo</p></a></div>
-        <div class="col-md-3 col-sm-6"><a class="cuPC1" href="../PROYECTO SEMESTRAL/Exclusivo PC/LEAGUE OF LEGENDS.html" ><img src="../PROYECTO SEMESTRAL/img/PC/LEAGUE OF LEGENDS.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">League Of Legend</p></a></div>
+        <div class="col-md-3 col-sm-6"><a  class="cuPC1" href="../PROYECTO SEMESTRAL/Exclusivo PC/COUNTER STRIKE.html" ><img src="../PROYECTO SEMESTRAL/img/PC/counter strike.webp"  alt="sin imagen" class="img"><br><p class="letraPC" style="border-radius: 0px;background: rgb(2, 155, 142);padding: 15px;width: 178px;height: 50px;color: rgb(255 255 255);">Counter Strike</p></a></div>
+        <div class="col-md-3 col-sm-6"><a class="cuPC1" href="../PROYECTO SEMESTRAL/Exclusivo PC/DOTA 2.html" ><img src="../PROYECTO SEMESTRAL/img/PC/Dota 2.jpg"  alt="sin imagen" class="img"><br><p class="letraPC" style="border-radius: 0px;background: rgb(2, 155, 142);padding: 15px;width: 178px;height: 50px;color: rgb(255 255 255);">Dota 2</p></a></div>
+        <div class="col-md-3 col-sm-6"><a class="cuPC1" href="../PROYECTO SEMESTRAL/Exclusivo PC/ESCAPE FROM TARKOV.html" ><img src="../PROYECTO SEMESTRAL/img/PC/Escape from Tarkov.jpg"  alt="sin imagen" class="img"><br><p class="letraPC" style="border-radius: 0px;background: rgb(2, 155, 142);padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">Escape From Tarkvo</p></a></div>
+        <div class="col-md-3 col-sm-6"><a class="cuPC1" href="../PROYECTO SEMESTRAL/Exclusivo PC/LEAGUE OF LEGENDS.html" ><img src="../PROYECTO SEMESTRAL/img/PC/LEAGUE OF LEGENDS.jpg"  alt="sin imagen" class="img"><br><p class="letraPC" style="border-radius: 0px;background: rgb(2, 155, 142);padding: 15px;width: 178px;height: 88px;color: rgb(255 255 255);">League Of Legend</p></a></div>
       </div><br><br>
 
 
