--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
@@ -44,7 +44,7 @@
               </li>
               <li class="nav-item dropdown active , cu1">
                 <a class="nav-link dropdown-toggle , cu1" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Seleccione
+                  Perfil
                 </a>
                 <div class="dropdown-menu , cu1" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item , cu1" href="../Login.html">Iniciar Sesion</a>
