--- a/PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Nintendo/ANIMAL CROSSING.html
@@ -89,7 +89,8 @@
                     <img src="../img/NINTENDO/nintendo.jpg" alt="Juego Nintendo" class="logoY"></a></p>
             </div>
         </div>
-        <br><br><br><div class="row">
+        <br><br><br>
+        <div class="row">
           <div class="col"><form action="/action_page.php">
             <h4 class="letraVJ">Comentario</h4>
               <textarea class="cu1" name="message" rows="5" cols="140"></textarea>
