--- a/PROYECTO SEMESTRAL/Pantalla.html
+++ b/PROYECTO SEMESTRAL/Pantalla.html
@@ -61,12 +61,12 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-6 col-sm-6">
-          <h5 style="border-radius: 25px;
+        <div class="col-md-12 col-sm-12">
+          <h5 style="border-radius: 10px;
           background: #ffffffc9;
-          padding: 15px;
-          width: 1000px;
-          height: 100px; color: rgb(0, 0, 0);">GameTopia es una de las mejores páginas de juegos. Descubre nuestra selección de juegos que convertirán tu navegador en la mejor plataforma de diversión.
+          padding: auto;
+          width: auto;
+          height: auto; color: rgb(0, 0, 0); " class="centrar">GameTopia es una de las mejores páginas de juegos. Descubre nuestra selección de juegos que convertirán tu navegador en la mejor plataforma de diversión.
              GameTopia es la página de juegos más completa, en la que encontrarás toda la diversión a un clic de distancia. ¿A qué esperas para explorar?</h5>
         </div>
       </div><br>
