--- a/PROYECTO SEMESTRAL/olvidado.html
+++ b/PROYECTO SEMESTRAL/olvidado.html
@@ -69,8 +69,9 @@
                         <h4><label class="form-label , letraLo , cu">Escribe tu correo o telefono movil: </label></h4>
                         <input required class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com o 9123456789">
                     </div><br>
-                    <div><h4 class="centrar , letraLo , cu">Le llegara un Correo o un SMS a su respectivo dispositivo</h4></div><br>
-                    <input type="submit" value="Enviar" class="btn btn-danger" style="margin-left:400px; ">
+                    <div><h4 class="centrar , letraLo , cu">Le llegara un Correo o un SMS a su respectivo dispositivo</h4>
+                    <input type="submit" value="Enviar" class="btn btn-danger" ></div><br>
+                    
                     
 
                 </form>
