Caja de comentario

--- a/PROYECTO SEMESTRAL/Exclusivo PC/EUROPA UNIVERSALIS.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/EUROPA UNIVERSALIS.html
@@ -104,11 +104,12 @@
             </div>
         </div>
         <br><br><br><div class="row">
-          <div class="col"><form action="/action_page.php">
+          <div class="col-md-3 col-sm-12"></div>
+          <div class="col-md-9 col-sm-12"><form action="/action_page.php">
             <h4 class="letraVJ">Comentario</h4>
-              <textarea class="cu1" name="message" rows="5" cols="140"></textarea>
+              <textarea class="cu1" name="message" rows="5" cols="65"></textarea>
               
-              <input type="submit" value="Enviar" class="btn btn-danger , cu1"  >
+              <br><br><input type="submit" value="Enviar" class="btn btn-danger , cu1"  >
             </form><br><br><br><br>
           </div>
       </div>
