--- a/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
+++ b/PROYECTO SEMESTRAL/Exclusivo PC/pc.html
@@ -70,8 +70,8 @@
         
         <div class="row"><br><br>
             <div class="col-md-3 col-sm-6 centrar"><a  class="cuPC1" href="../Exclusivo PC/BLACK MESA.html" ><img src="../img/PC/Black Mesa.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">BLACK MESA</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/BATTLE TECH.html" ><img src="../img/PC/BattleTech.png"  alt="sin imagen" class="img"><br><p class="letraPC">BATTLE TECH</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/COUNTER STRIKE.html" ><img src="../img/PC/counter strike.webp"  alt="sin imagen" class="img"><br><p class="letraPC">CS:GO</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/BATTLE TECH.html" ><img src="../img/PC/BattleTech.png"  alt="sin imagen" class="img" width="300" height="270"><br><p class="letraPC">BATTLE TECH</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/COUNTER STRIKE.html" ><img src="../img/PC/counter strike.webp"  alt="sin imagen" class="img" width="300" height="270"><br><p class="letraPC">CS:GO</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/CRUSADER KINGS.html" ><img src="../img/PC/Crusader Kings III.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">CRUSADER KINGS</p></a></div>
         </div><br><br>
 
@@ -84,15 +84,15 @@
 
         <div class="row">
             <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/DEVOUR.html" ><img src="../img/PC/devour.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">DEVOUR</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/DOTA 2.html" ><img src="../img/PC/Dota 2.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">DOTA 2</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/ESCAPE FROM TARKOV.html" ><img src="../img/PC/Escape from Tarkov.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">ESCAPE FROM TARKOV</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/DOTA 2.html" ><img src="../img/PC/Dota 2.jpg"  alt="sin imagen" class="img" width="300" height="280"><br><p class="letraPC">DOTA 2</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/ESCAPE FROM TARKOV.html" ><img src="../img/PC/Escape from Tarkov.jpg"  alt="sin imagen" class="img" width="300" height="280"><br><p class="letraPC">ESCAPE FROM TARKOV</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/EUROPA UNIVERSALIS.html" ><img src="../img/PC/Europa Universalis IV.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">EUROPA UNIVERSALIS</p></a></div>
         </div><br><br>
 
         <div class="row">
             <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/EVE.html" ><img src="../img/PC/EVE Online.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">EVE</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/H1Z1.html" ><img src="../img/PC/h1z1.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">H1Z1</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/PACIFY.html" ><img src="../img/PC/pacify.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">PACIFY</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/H1Z1.html" ><img src="../img/PC/h1z1.jpg"  alt="sin imagen" class="img" width="300" height="250"><br><p class="letraPC">H1Z1</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/PACIFY.html" ><img src="../img/PC/pacify.jpg"  alt="sin imagen" class="img" width="300" height="250"><br><p class="letraPC">PACIFY</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuPC1" href="../Exclusivo PC/LEAGUE OF LEGENDS.html" ><img src="../img/PC/LEAGUE OF LEGENDS.jpg"  alt="sin imagen" class="img"><br><p class="letraPC">LEAGUE OF LEGENDS</p></a></div>
         </div><br><br>
 
