--- a/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Play/playstation.html
@@ -72,13 +72,13 @@
             <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/BATMAN_ARKHAM_KNIGHT.html" ><img src="../img/PLAYSTATION/batman arkham knight.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">BATMAN ARKHAM KNIGHT</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/BIOMUTANT.HTML" ><img src="../img/PLAYSTATION/biomutant.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">BIOMUTANT</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/CHRONOS BEFORE THE ASHES.html" ><img src="../img/PLAYSTATION/chronos before the ashes.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">CHRONOS BEFORE THE ASHES</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/DEMOS'N SOULS.html" ><img src="../img/PLAYSTATION/demons souls.jpeg"  alt="sin imagen" class="img" ><br><p class="letrap">DEMOS'N SOULS</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/DEMOS'N SOULS.html" ><img src="../img/PLAYSTATION/demons souls.jpeg"  alt="sin imagen" class="img" width="300" height="250" ><br><p class="letrap">DEMOS'N SOULS</p></a></div>
         </div><br><br>
 
         <div class="row">
             <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/DETROIT BECOME HUMAN.html" ><img src="../img/PLAYSTATION/detroit become human.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">DETROIT BECOME HUMAN</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/GHOST OF TSUSHIMA.html" ><img src="../img/PLAYSTATION/ghost os tsushima.jpeg"  alt="sin imagen" class="img"><br><p class="letrap">GHOST OF TSUSHIMA</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/GOD OF WAR RAGNAROK.html" ><img src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg"  alt="sin imagen" class="img" ><br><p class="letrap">GOD OF WAR RAGNAROK</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/GHOST OF TSUSHIMA.html" ><img src="../img/PLAYSTATION/ghost os tsushima.jpeg"  alt="sin imagen" class="img" width="300" height="250"><br><p class="letrap">GHOST OF TSUSHIMA</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/GOD OF WAR RAGNAROK.html" ><img src="../img/PLAYSTATION/GOD OF WAR RAGNAROK.jpeg"  alt="sin imagen" class="img" width="300" height="250"><br><p class="letrap">GOD OF WAR RAGNAROK</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuP1" href="../Exclusivo Play/GOD OF WAR.html" ><img src="../img/PLAYSTATION/god of war.jpeg"  alt="sin imagen" class="img"><br><p class="letrap"> GOD OF WAR</p></a></div>
         </div><br><br>
 
