--- a/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
+++ b/PROYECTO SEMESTRAL/Exclusivo Xbox/xbox.html
@@ -71,7 +71,7 @@
         
         <div class="row">
             <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/deadrising.html" ><img src="../img/XBOX/DEAD RISING.jfif"  alt="sin imagen" class="img"><br><p class="letraX">DEAD RISING</p></a></div>
-            <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/DESTINY.html" ><img src="../img/XBOX/DESTINY.jpg"  alt="sin imagen" class="img"><br><p class="letraX"> DESTINY</p></a></div>
+            <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/DESTINY.html" ><img src="../img/XBOX/DESTINY.jpg"  alt="sin imagen" class="img" width="300" height="250"><br><p class="letraX" > DESTINY</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/GEARS OF WAR 3.html" ><img src="../img/XBOX/GEARS OF WAR 3.jpg"  alt="sin imagen" class="img"><br><p class="letraX">GEARS OF WAR 3</p></a></div>
             <div class="col-md-3 col-sm-6 centrar"><a class="cuX1" href="../Exclusivo Xbox/HALO INFINITE.html" ><img src="../img/XBOX/HALO INFINITE.jpg"  alt="sin imagen" class="img"><br><p class="letraX">HALO INFINITE</p></a></div>
         </div><br><br>
