--- a/PROYECTO SEMESTRAL/administrador.html
+++ b/PROYECTO SEMESTRAL/administrador.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="./CSS/cambios.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
 <body class="fondoLo cu">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -61,7 +61,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <h3 style="border-radius: 0px;background: #0004ff;padding: auto;width: auto;height: auto;color: rgb(255 255 255); text-align: center;">Perfiles Definidos</h3>
+                    <h3 class="letraLo" style="border-radius: 0px;background: #0004ff;padding: auto;width: auto;height: auto;color: rgb(255 255 255); text-align: center;">Perfiles Definidos</h3>
                 </div>
             </div><br><br>
             <div class="row">
@@ -102,10 +102,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-6 col-sm-6">
                     <input type="submit" value="Modificar Perfil" class="btn" >
                 </div>
-                <div class="col-md-6" style="text-align: right;">
+                <div class="col-md-6 col-sm-6" style="text-align: right;">
                     <input  type="submit" value="Eliminar Perfil" class="btn btn-danger" >
                 </div>
             </div>
