--- a/PROYECTO SEMESTRAL/administrador.html
+++ b/PROYECTO SEMESTRAL/administrador.html
@@ -88,6 +88,17 @@
                       <td>Usuario</td>
                     </tr>
                     <tr>
+                      <td>Benito Benavides</td>
+                      <td>B.benavides67@gmail.com</td>
+                      <td>benit0Op</td>
+                      <td>965786189</td>
+                      <td>33 años</td>
+                      <td>1, Diciembre 1990</td>
+                      <td>Masculino</td>
+                      <td>Usuario</td>
+
+                    </tr>
+                    <tr>
                       <td>Joao Lisboa</td>
                       <td>joa.lis@gmail.com</td>
                       <td>html123</td>
@@ -98,6 +109,7 @@
                       <td>Administrador</td>
 
                     </tr>
+                    
                   </table>
                 </div>
             </div>
