--- a/PROYECTO SEMESTRAL/administrador.html
+++ b/PROYECTO SEMESTRAL/administrador.html
@@ -58,7 +58,7 @@
           </form>
         </nav>
         </div><br><br>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
                     <h3 class="letraLo" style="border-radius: 0px;background: #0004ff;padding: auto;width: auto;height: auto;color: rgb(255 255 255); text-align: center;">Perfiles Definidos</h3>
