--- a/PROYECTO SEMESTRAL/administrador.html
+++ b/PROYECTO SEMESTRAL/administrador.html
@@ -132,9 +132,9 @@
                 </tr>
               </div>
             <div class="col-md-2 col-sm-3"></div>
-            <input  type="submit" value="Permitir comentario" class="btn btn-danger" >
+            <input  type="submit" value="Permitir comentario" class="btn" >
             <input  type="submit" value="Modificar comentario" style="margin-left: 330px;" >
-            <input  type="submit" value="Eliminar comentario" style="margin-left: 305px;" >
+            <input  type="submit" value="Eliminar comentario" class="btn btn-danger" style="margin-left: 305px;" >
 
           </div>
           <div class="row">
