--- a/PROYECTO SEMESTRAL/administrador.html
+++ b/PROYECTO SEMESTRAL/administrador.html
@@ -65,7 +65,7 @@
                 </div>
             </div><br><br>
             <div class="row">
-                <div class="col-md-12 col-sm-12">
+                <div class="table-responsive">
                 <table class="table">
                     <tr>
                       <th>Nombre</th>
