--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -64,31 +64,32 @@
         <div class="row" style="margin-top: 50px;">
             <div class="col-md-12 col-sm-12">
                 <h1 class="centrar , letraLo" >Regístrate</h1><br>
-                <form action="#" method="POST" name="form1" enctype="multipart/form-data">
+                <form action="#" method="POST" id="formRegistro" enctype="multipart/form-data">
                     <div class="form-group" ><label class="form-label , letraLo , cu"><h4>Nombre:</h4> </label>
-                    <input class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="Alvaro" maxlength="15" minlength="3"></div>
+                    <input class="form-control , letraLo , cu1" type="text" name="" id="nombre" value="" placeholder="Alvaro" maxlength="15" minlength="3"></div>
                     
                     <div class="form-group" ><label class="form-label , letraLo , cu"><h4>Apellido: </h4></label>
-                        <input class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="Hernandez" maxlength="15" minlength="3"></div>
+                        <input class="form-control , letraLo , cu1" type="text" name="" id="apellido" value="" placeholder="Hernandez" maxlength="15" minlength="3"></div>
 
                     <div class="form-group" >
                         <label class="form-label , letraLo , cu" ><h4>Contraseña:</h4> </label>
-                        <input required class="form-control , letraLo , cu1" type="password" name="nombre" value="" placeholder="12345" maxlength="10" minlength="5"></div>
+                        <input required class="form-control , letraLo , cu1" type="password" name="" id="password" value="" placeholder="12345" maxlength="10" minlength="5"></div>
 
                     <div class="form-group" >
                         <label class="form-label , letraLo , cu"><h4>Confirmar contraseña:</h4> </label>
-                        <input required class="form-control , letraLo , cu1" type="password" name="nombre" value="" placeholder="12345" maxlength="10" minlength="5"></div>
+                        <input required class="form-control , letraLo , cu1" type="password" name="" id="con_password" value="" placeholder="12345" maxlength="10" minlength="5"></div>
 
                     <div class="form-gruop" ><label class="form-label , letraLo , cu" ><h4>Email:</h4> </label>
-                        <input required class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com"></div><br>
+                        <input required class="form-control , letraLo , cu1" type="text" name="" id="email" value="" placeholder="ejemplo123@gmail.com"></div><br>
+                        
                     <div class="form-gruop" ><label class="form-label , letraLo , cu" ><h4>Telefono movil:</h4> </label>
-                        <input required class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="912345678" maxlength="11" minlength="9"></div><br>
+                        <input required class="form-control , letraLo , cu1" type="text" name="" id="telefono" value="" placeholder="912345678" maxlength="11" minlength="9"></div><br>
 
                     <div class="form-group"><label class="form-label , letraLo , cu" ><h4>Fecha de Nacimiento:</h4> </label><br>
-                    <input class="cu1" type="date" name="f_nac"></div><br>
+                    <input class="cu1" type="date" name="" id="f_nac"></div><br>
 
                     <div class="form-group"><label class="form-label , letraLo , cu"><h4>Edad:</h4> </label><br>
-                    <input class="cu1" type="number" name="edad" min="1"></div><br>
+                    <input class="cu1" type="number" name="" id="edad" min="1"></div><br>
 
                     <div class="form-group">
                         <label for="exampleFormControlFile1" class="letraLo , cu"><h4>Seleccione una foto de perfil</h4></label>
