--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" 
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -81,7 +84,7 @@
 
                     <div class="form-gruop" ><label class="form-label , letraLo , cu" ><h4>Email:</h4> </label>
                         <input required class="form-control , letraLo , cu1" type="text" name="" id="email" value="" placeholder="ejemplo123@gmail.com"></div><br>
-                        
+
                     <div class="form-gruop" ><label class="form-label , letraLo , cu" ><h4>Telefono movil:</h4> </label>
                         <input required class="form-control , letraLo , cu1" type="text" name="" id="telefono" value="" placeholder="912345678" maxlength="11" minlength="9"></div><br>
 
@@ -122,6 +125,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" 
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
         crossorigin="anonymous"></script>
+    <script src="JS/jquery.js"></script>
 </body>   
 </body>
 </html>
