jquery registrarse validar

--- a/PROYECTO SEMESTRAL/Login.html
+++ b/PROYECTO SEMESTRAL/Login.html
@@ -67,7 +67,7 @@
             <div class="col-md-3 col-sm-3"></div>
             <div class="col-md-6 col-sm-6" style="margin-top: 80px;">
                 <h1 class="centrar , letraLo ">Iniciar Sesion</h1><br><br>
-                <form action="#" method="POST" name="form1" enctype="multipart/form-data">
+                <form action="#" method="POST" name="" id="formlogin" enctype="multipart/form-data">
                     <div class="form-group , cu1"  >
                         <h4><label class="form-label , letraLo , cu">Email: </label></h4>
                         <input required class="form-control , letraLo , cu1" type="text" name="nombre" value="" placeholder="ejemplo123@gmail.com">
