avance validaciones de registro

--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -72,21 +72,21 @@
                     <input class="form-control , letraLo , cu1" type="text" name="" id="nombre" value="" placeholder="Alvaro"></div>
                     
                     <div class="form-group" ><label class="form-label , letraLo , cu"><h4>Apellido: </h4></label>
-                        <input class="form-control , letraLo , cu1" type="text" name="" id="apellido" value="" placeholder="Hernandez" maxlength="15" minlength="3"></div>
+                        <input class="form-control , letraLo , cu1" type="text" name="" id="apellido" value="" placeholder="Hernandez"></div>
 
                     <div class="form-group" >
                         <label class="form-label , letraLo , cu" ><h4>Contraseña:</h4> </label>
-                        <input  class="form-control , letraLo , cu1" type="password" name="" id="password" value="" placeholder="12345" maxlength="10" minlength="5"></div>
+                        <input  class="form-control , letraLo , cu1" type="password" name="" id="password" value="" placeholder="12345678"></div>
 
                     <div class="form-group" >
                         <label class="form-label , letraLo , cu"><h4>Confirmar contraseña:</h4> </label>
-                        <input  class="form-control , letraLo , cu1" type="password" name="" id="con_password" value="" placeholder="12345" maxlength="10" minlength="5"></div>
+                        <input  class="form-control , letraLo , cu1" type="password" name="" id="con_password" value="" placeholder="12345" ></div>
 
                     <div class="form-gruop" ><label class="form-label , letraLo , cu" ><h4>Email:</h4> </label>
                         <input  class="form-control , letraLo , cu1" type="text" name="" id="email" value="" placeholder="ejemplo123@gmail.com"></div><br>
 
                     <div class="form-gruop" ><label class="form-label , letraLo , cu" ><h4>Telefono movil:</h4> </label>
-                        <input  class="form-control , letraLo , cu1" type="text" name="" id="telefono" value="" placeholder="912345678" maxlength="11" minlength="9"></div><br>
+                        <input  class="form-control , letraLo , cu1" type="text" name="" id="telefono" value="" placeholder="912345678"></div><br>
 
                     <div class="form-group"><label class="form-label , letraLo , cu" ><h4>Fecha de Nacimiento:</h4> </label><br>
                     <input class="cu1" type="date" name="" id="f_nac"></div><br>
@@ -107,7 +107,7 @@
                         <option value="O">Otro</option></h5>
                     </select></div><br>
 
-                    <div><input type="submit" value="Enviar" class="btn btn-danger" style="margin-right: 50px;"><input type="reset" value="Limpiar" class="btn btn-danger" ></div><br><br>
+                    <div><input type="submit" value="Enviar" class="btn btn-danger" style="margin-right: 50px;"><input type="reset" value="Limpiar" class="btn btn-danger" ></div><br>
                     <p class="warnings" id="warnings"></p>
                     
                 </form>
