--- a/PROYECTO SEMESTRAL/Contacto.html
+++ b/PROYECTO SEMESTRAL/Contacto.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Serif:wght@700&display=swap" rel="stylesheet">
     
 </head>
-<body class="fondoLo , cu">
+<body class="fondoPP , cu">
     <div><nav class="navbar navbar-expand-lg navbar-light bg-light">
         <h3>GameTopia</h3>
         <a class="navbar-brand" href="Pantalla.html"  style="margin-left: 25px;" >Inicio</a>
