avance contrasena registro

--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -107,8 +107,13 @@
                         <option value="O">Otro</option></h5>
                     </select></div><br>
 
-                    <div><input type="submit" value="Enviar" class="btn btn-danger" style="margin-right: 50px;"><input type="reset" value="Limpiar" class="btn btn-danger" ></div><br>
-                    <p class="warnings" id="warnings"></p>
+                    <div><input type="submit" value="Enviar" class="btn btn" style="margin-right: 50px;"><input type="reset" value="Limpiar" class="btn btn" ></div><br>
+                    <p style="border-radius: 0px;
+                    background: #11680b;
+                    padding: auto;
+                    width: 500px;
+                    height: auto;
+                    color: rgb(255 255 255);" class="warnings" id="mensaje"></p>
                     
                 </form>
             </div></div>
@@ -127,6 +132,7 @@
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" 
         crossorigin="anonymous"></script>
     <script src="JS/jquery.js"></script>
+    
 </body>   
 </body>
 </html>
