estilos login y registro, titulo destacado para perfil y registro
a

--- a/PROYECTO SEMESTRAL/Login.html
+++ b/PROYECTO SEMESTRAL/Login.html
@@ -89,9 +89,9 @@
                       </div>
                       <div class="form-check , cu1">
                         <input type="checkbox" class="form-check-input , cu1" id="exampleCheck1">
-                        <label class="form-check-label , letraLo , cu1" for="exampleCheck1"><h6>Mantener sesion iniciada</h6></label>
+                        <label class="form-check-label , letraLo , cu1, sesion" for="exampleCheck1"><h6>Mantener sesion iniciada</h6></label>
                     </div><br>
-                    <a class="cu1" href="olvidado.html"><p >¿Olvidaste tu contraseña?</p></a><br>
+                    <a class="cu1 , centrar" href="olvidado.html"><p >¿Olvidaste tu contraseña?</p></a><br>
                       <button class="buttonlogin" type="submit">Entrar</button>
                       <p class="warnings" id="warnings"></p>
                   </div>
