--- a/PROYECTO SEMESTRAL/Registrarse.html
+++ b/PROYECTO SEMESTRAL/Registrarse.html
@@ -66,8 +66,9 @@
     <div class="container" class="fondo">
         <div class="row" style="margin-top: 50px;">
             <div class="col-md-12 col-sm-12">
-                <h1 class="centrar , letraLo" >Regístrate</h1><br>
-                <form action="#" method="POST" id="formRegistro" enctype="multipart/form-data">
+                <h1 class="titulodestacado" >Regístrate</h1><br>
+                  <form action="#" method="POST" id="formlogin" enctype="multipart/form-data">
+                    <div class="form">
                     <div class="form-group" ><label class="form-label , letraLo , cu"><h4>Nombre:</h4> </label>
                     <input class="form-control , letraLo , cu1" type="text" name="" id="nombre" value="" placeholder="Alvaro"></div>
                     
