--- a/PROYECTO SEMESTRAL/ver perfil.html
+++ b/PROYECTO SEMESTRAL/ver perfil.html
@@ -64,7 +64,7 @@
         
         <div class="row" style="margin-top: 50px;">
             <div class="col-md-12 col-sm-12">
-                <h1 class="letraLo , centrar , cu" >Bienvenido a tu perfil podras apreciar todos tu datos pasando el mouse sobre tu foto.</h1>
+                <h1 class="titulodestacado" >Bienvenido a tu perfil podras apreciar todos tu datos pasando el mouse sobre tu foto.</h1>
         <div class="row">
           <div class="col-md-8 col-sm-12">
             <br><br><br><br><br><div class="flip-card , cu" >
