validaciones casi terminadas

--- a/PROYECTO SEMESTRAL/Login.html
+++ b/PROYECTO SEMESTRAL/Login.html
@@ -80,11 +80,11 @@
                       <h1 class="centrar">Iniciar sesion</h1>
                       
                       <div class="grupo">
-                          <input type="email" name="" id="email"><span class="barra" required ></span>
+                          <input type="email" name="" id="loginEmail"><span class="barra" required ></span>
                           <label for="">Email</label>
                       </div>
                       <div class="grupo">
-                          <input type="password" name="" id="password"><span class="barra" required></span>
+                          <input type="password" name="" id="loginPassword"><span class="barra" required></span>
                           <label for="">Password</label>
                       </div>
                       <div class="form-check , cu1">
