--- a/PROYECTO SEMESTRAL/Modificar.html
+++ b/PROYECTO SEMESTRAL/Modificar.html
@@ -64,7 +64,7 @@
         <div class="row" style="margin-top: 50px;">
             <div class="col-md-12 col-sm-12">
                 <h1  class="centrar , letraLo , cu">Modificar perfil</h1><br>
-                <form action="#" method="POST" name="" id="Mform" enctype="multipart/form-data">
+                <form action="#" method="POST" name="" id="formlogin" enctype="multipart/form-data">
                     <div class="form-group" ><label class="form-label"><h4 class="letraLo , cu">Cambiar Nombre: </h4></label>
                     <input class="form-control , cu1" type="text" name="nombre" value="" placeholder="Armando" maxlength="15" minlength="3"></div><br>
                     <h4 class="letraLo , cu">Cambiar foto de perfil:</h4><br>
